Fix slight background color problem and z-index'ing)

--- a/components/globals/navbar.module.scss
+++ b/components/globals/navbar.module.scss
@@ -10,6 +10,7 @@ $hoverDistance: 4px;
   gap: 25px;
   padding: 10px;
   border-bottom: 1px solid var(--color-1);
+  background-color: var(--background-color);
 
   a {
     color: var(--color-2);
