--- a/components/projects/project-image.module.scss
+++ b/components/projects/project-image.module.scss
@@ -37,7 +37,7 @@
 
   p {
     margin: 0;
-    z-index: 10;
+    z-index: 9;
     color: transparent;
     align-self: center;
     font-size: 14px;
