--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
   --color-1: #FFB703;
   --color-1-lighter: #FFD15C;
   --color-2: #219EBC;
+  --color-2-transparent: rgba(33, 158, 188, 0.49);
   --color-3: #8ECAE6;
   --color-4: #000000;
 
@@ -15,14 +16,17 @@
   --animation-duration: 2s;
 }
 
+/* Add default background color */
 html,
 body,
-div {
-  font-family: var(--font-mono);
+body > div {
   background-color: var(--background-color);
 }
 
-pre {
+html,
+body,
+pre,
+div {
   font-family: var(--font-mono);
 }
 
@@ -71,6 +75,7 @@ h1 {
 section {
   display: flex;
   flex-direction: column;
+  z-index: 3;
 }
 
 button {
