--- a/styles/pages.css
+++ b/styles/pages.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   margin: 0 100px 0 100px;
-  padding-top: 40px;
+  padding-top: 46px;
 }
 
 p a {
